[gd_scene load_steps=27 format=2]

[ext_resource path="res://owl/hissile.gd" type="Script" id=1]
[ext_resource path="res://mj-projectiles-tilesheet.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=25]
radius = 5.0

[sub_resource type="CircleShape2D" id=9]
radius = 4.39732

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.277419, 0.458065, 0.735484 )
colors = PoolColorArray( 0.730469, 0.0114136, 0.0114136, 1, 0.843137, 0.854902, 0.027451, 1, 0.391113, 0.369979, 0.247394, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.129213, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -0.328828, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 0.6
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
spread = 20.0
flatness = 0.47
gravity = Vector3( 0, 0, 0 )
initial_velocity = 75.0
initial_velocity_random = 0.3
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
damping = 67.32
scale = 1.5
scale_random = 0.17
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
hue_variation = -0.01
hue_variation_random = 1.0

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0.0129032, 0.290323, 0.625806, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.882353, 0.768627, 0.0235294, 0.85098, 0, 0, 0, 0.858824, 0.0941176, 0.0823529, 0.0823529, 0 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 23 )

[sub_resource type="Curve" id=20]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.477528, 0.781818 ), -0.663869, -0.663869, 0, 0, Vector2( 1, 0 ), 0.326606, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=21]
curve = SubResource( 20 )

[sub_resource type="ParticlesMaterial" id=22]
lifetime_randomness = 0.1
trail_divisor = 2
flag_disable_z = true
spread = 117.49
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.6
angular_velocity = 30.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -31.68
damping = 70.0
damping_random = 0.24
scale = 4.0
scale_random = 0.7
scale_curve = SubResource( 21 )
color_ramp = SubResource( 24 )
hue_variation = 0.01
hue_variation_random = 1.0

[sub_resource type="Animation" id=6]
resource_name = "arm"

[sub_resource type="Animation" id=7]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/explode/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 5.0

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 12, 30, 12 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 30, 12, 30, 12 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 60, 12, 30, 12 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 90, 12, 30, 12 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 30, 12 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 30, 0, 30, 12 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 30, 12 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 90, 0, 30, 12 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "cormove",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[node name="hissile" type="KinematicBody2D" groups=["explosion"]]
scale = Vector2( 3, 3 )
collision_layer = 6
collision_mask = 6
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 25 )
disabled = true

[node name="Node2D" type="Node2D" parent="."]

[node name="hurtbox" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/hurtbox"]
position = Vector2( 10.577, 0 )
shape = SubResource( 9 )
disabled = true

[node name="Particles2D" type="Particles2D" parent="Node2D"]
position = Vector2( -9.33333, -0.333334 )
rotation = 3.14159
amount = 100
process_material = SubResource( 1 )

[node name="ex" type="Particles2D" parent="Node2D"]
position = Vector2( -9.33333, -0.333334 )
rotation = 3.14159
emitting = false
amount = 200
lifetime = 0.8
one_shot = true
explosiveness = 0.93
process_material = SubResource( 22 )

[node name="Tween" type="Tween" parent="Node2D"]

[node name="Tween2" type="Tween" parent="Node2D"]

[node name="life" type="Timer" parent="Node2D"]
one_shot = true

[node name="arm_time" type="Timer" parent="Node2D"]
one_shot = true

[node name="anim" type="AnimationPlayer" parent="Node2D"]
root_node = NodePath("../..")
anims/arm = SubResource( 6 )
anims/explode = SubResource( 7 )

[node name="explode" type="StaticBody2D" parent="Node2D" groups=["explosion"]]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/explode"]
shape = SubResource( 8 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D"]
frames = SubResource( 18 )
animation = "cormove"
frame = 1
playing = true
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="Node2D/hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="Node2D/life" to="." method="explode"]
[connection signal="timeout" from="Node2D/arm_time" to="." method="armed"]
[connection signal="animation_finished" from="Node2D/anim" to="." method="_on_anim_animation_finished"]
